--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.2
   readmore: ^2.2.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/creators/
+    - images/resources/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
