--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.2
   readmore: ^2.2.0
+  timeago:
+  flutter_riverpod: ^2.0.2
+  miniplayer: ^1.0.1
   
 
 dev_dependencies:
